clang/test/BSC/Negative/InitAnalysis/init-ensure-init-redecl.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Test that a forward declaration with ensure_init is compatible with
// a definition that omits the attribute. The attribute is propagated
// from the declaration to the definition during merging.

// No conflict: definition without attribute matches declaration with it.
_Safe void foo(int *__attribute__((ensure_init)) _Borrow out);
_Safe void foo(int *_Borrow out) {
    *out = 1;
}

// Multiple params: only some have ensure_init.
_Safe void bar(int *__attribute__((ensure_init)) _Borrow a, int *_Borrow b);
_Safe void bar(int *_Borrow a, int *_Borrow b) {
    *a = 42;
}

// Caller side: calling through the declared signature still initializes.
_Safe void test_caller(void) {
    int x;
    foo(&_Mut x);
    int y = x;
}

// Callee side: ensure_init contract is enforced on the definition even
// though the attribute was only on the forward declaration.
_Safe void baz(int *__attribute__((ensure_init)) _Borrow out);
_Safe void baz(int *_Borrow out) {
} // expected-error {{'*out' not initialized at return in __attribute__((ensure_init)) function}}

// Callee side: only writing through one of two ensure_init params.
_Safe void two_params(int *__attribute__((ensure_init)) _Borrow a,
                      int *__attribute__((ensure_init)) _Borrow b);
_Safe void two_params(int *_Borrow a, int *_Borrow b) {
    *a = 1;
} // expected-error {{'*b' not initialized at return in __attribute__((ensure_init)) function}}

// Callee side: conditional init is maybe-uninit.
_Safe void cond_init(int *__attribute__((ensure_init)) _Borrow out, int flag);
_Safe void cond_init(int *_Borrow out, int flag) {
    if (flag)
        *out = 1;
} // expected-error {{'*out' may not be initialized on all paths at return in __attribute__((ensure_init)) function}}

// Callee side: writing through *out in all paths fulfills the contract.
_Safe void branch_ok(int *__attribute__((ensure_init)) _Borrow out, int flag);
_Safe void branch_ok(int *_Borrow out, int flag) {
    if (flag)
        *out = 1;
    else
        *out = 2;
}

// Chain call: test_chain calls init_x, init_x calls init_int to init.
_Safe void init_int(int *__attribute__((ensure_init)) _Borrow out);
_Safe void init_int(int *_Borrow out) {
    *out = 99;
}

_Safe void init_x(int *__attribute__((ensure_init)) _Borrow out);
_Safe void init_x(int *_Borrow out) {
    init_int(out); // delegation: pass ensure_init param to another ensure_init
}

_Safe int use_val(int v);

_Safe int test_chain(void) {
    int x;
    init_x(&_Mut x);
    int y = use_val(x);
    return y;
}

// Real-world pattern: struct initialized by syscall via _Unsafe escape.
struct stat {
    unsigned int st_dev;
    unsigned int st_ino;
    unsigned int st_mode;
    unsigned int st_nlink;
    unsigned int st_size;
};

#define S_IFDIR 0040000

int lstat(const char *path, struct stat *__attribute__((ensure_init)) buf);

_Safe int is_directory(const char *_Borrow path) {
    struct stat dirStat;
    int ret = _Unsafe(lstat((const char *)path, &dirStat));
    if (ret == -1 || !(S_IFDIR & dirStat.st_mode))
        return 0;
    return 1;
}

// memset / memcpy with ensure_init.
// Redeclaring builtins with ensure_init is now compatible (ensure_init is
// stripped during type merging), so no warning is expected.
typedef unsigned long size_t;
void *memset(void *__attribute__((ensure_init)) s, int c, size_t n);
void *memcpy(void *__attribute__((ensure_init)) dest, const void *src, size_t n);

_Safe void test_memset(void) {
    int val;
    _Unsafe(memset(&val, 0, sizeof(val))); // expected-warning {{expression result unused}}
    int x = val; // no error: ensure_init sees through the implicit cast
}

_Safe void test_memcpy(void) {
    int src = 42;
    int dst;
    _Unsafe(memcpy(&dst, &src, sizeof(dst))); // expected-warning {{expression result unused}}
    int x = dst; // no error: ensure_init sees through the implicit cast
}
